<resources>
    <string name="app_name">Random chat</string>
    <string name="facebook_app_id" translatable="false">PUT_YOUR_KEY_HERE</string>
    <string name="fb_login_protocol_scheme" translatable="false">tryyrtytry</string>
    <string name="map_key" translatable="false">AIzaSyBbdT8XDrm0EuZs_96ylmti8yUYugV62G8</string>
    <string name="admobKey" translatable="false">ca-app-pub-4386840216096394~6964074070</string>
    <string name="bannerId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="rewardedId" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="gems_plus_2">Get 3,300 additional gems. You can get more gems in every purchase. Bonus rates increase with long-term subscriptions</string>
    <string name="gems_plus">Get 2,999 jewels, which are valued at PRICE_HERE, in addition to 300 additional gems per month. Take advantage of the best prices for more jewels!</string>
    <string name="id_1">About Kylie</string>
    <string name="id_2">Connect with many users and make new friends from different countries of the world and learn about the diverse cultures around you, build new relationships from anywhere you want</string>
    <string name="id_3">" "Terms of Service" "</string>
    <string name="id_4">" "Privacy Policy" "</string>
    <string name="id_5">Delete account</string>
    <string name="id_6">translation</string>
    <string name="id_7">Write your message here</string>
    <string name="id_8">Did you receive an invitation from one of your friends?</string>
    <string name="id_9">Invitation Code</string>
    <string name="id_10">Send the code</string>
    <string name="id_11">No I have not received an invitation</string>
    <string name="id_12">Store</string>
    <string name="id_14">My Gems</string>
    <string name="id_15">Unlock premium features only for subscribers!</string>
    <string name="id_16">Loading …</string>
    <string name="id_17">Know your fans. Pull and discover as many profiles as you like.</string>
    <string name="id_18">Earn 3300 gems every month. Get a discount on jewels for life</string>
    <string name="id_19">Saves</string>
    <string name="id_20">No Saves. Drag the screen to start authenticating with a new random person!</string>
    <string name="id_21">Matching</string>
    <string name="id_22">Skip</string>
    <string name="id_23">Specify interests</string>
    <string name="id_24">Select the hobbies you like and they will appear on your profile</string>
    <string name="id_25">Continue</string>
    <string name="id_26">Search</string>
    <string name="id_27">This user has blocked you</string>
    <string name="id_28">Your friend\'s Kylie ID</string>
    <string name="id_29">Add a friend</string>
    <string name="id_30">Add friends by ID</string>
    <string name="id_31">Call through SMS</string>
    <string name="id_32">Call through the application</string>
    <string name="id_35">Leaving the application</string>
    <string name="id_36">Are you sure you want to exit?</string>
    <string name="id_37">Confirm</string>
    <string name="id_38">Undo</string>
    <string name="id_39">Clear the Saves</string>
    <string name="id_40">The matching record will be deleted Please note that this operation cannot be undone</string>
    <string name="id_41">Return</string>
    <string name="id_42">Delete now</string>
    <string name="id_43">is already blocked</string>
    <string name="id_44">You have previously blocked this contact, you can remove the ban from settings</string>
    <string name="id_46">hide</string>
    <string name="id_47">Manage Banning</string>
    <string name="id_48">You have chosen \" Skip \"</string>
    <string name="id_49">You can ignore a user by clicking the Skip button. Are you sure you want to ignore this user?</string>
    <string name="id_50">Confirm</string>
    <string name="id_51">Undo</string>
    <string name="id_52">Your account is suspended by the administrator</string>
    <string name="id_53">Your account was suspended due to misuse / fraud on Kyle services. You used to think that this happened in error. Email us</string>
    <string name="id_54">Check again</string>
    <string name="id_55">Sign out</string>
    <string name="id_56">You have no friends blocked</string>
    <string name="id_57">Friends</string>
    <string name="id_58">Messages</string>
    <string name="id_59">No record of previous chats at this time. Start chatting with Kyle users and we will start creating a record of your chats.</string>
    <string name="id_60">No friends on your Friends list! \n Meet new friends now</string>
    <string name="id_61">Complete your details</string>
    <string name="id_62">Kylie ID - Username</string>
    <string name="id_63">Username</string>
    <string name="id_64">your date of birth</string>
    <string name="id_65">Choose your date of birth</string>
    <string name="id_66">type</string>
    <string name="id_67">Female</string>
    <string name="id_68">Male</string>
    <string name="id_69">Create an account</string>
    <string name="id_70">Buying gems</string>
    <string name="id_71">1300 gems are required to unlock all regional regions for a period of 7 days.</string>
    <string name="id_72">Cancel</string>
    <string name="id_73">Purchase</string>
    <string name="id_74">You can earn Gems by:</string>
    <string name="id_75">If you enjoy our app, rate us on google play</string>
    <string name="id_76">Tell your friends about the app</string>
    <string name="id_77">Invite your friends and earn jewels</string>
    <string name="id_78">Earn by watching videos</string>
    <string name="close">Close</string>
    <string name="id_81">3.300 gems every month</string>
    <string name="id_82">Get additional gems from the jewelry store</string>
    <string name="id_84">- 3 months</string>
    <string name="id_85">6–4 month</string>
    <string name="id_86">7- month</string>
    <string name="id_87">geographic regions preferences</string>
    <string name="id_88">Balanced</string>
    <string name="id_89">my country</string>
    <string name="id_90">Global</string>
    <string name="ok">OK</string>
    <string name="id_91">Geographic regions preferences</string>
    <string name="id_92">Check out and meet friends from all over the world</string>
    <string name="id_93">13 / call</string>
    <string name="id_94">You can try our premium membership for VIPs, which enables you to use many features, not just geographic location preferences</string>
    <string name="id_95">Experience our VIP membership</string>
    <string name="id_96">Your code is:</string>
    <string name="id_97">Earn 15 💎 to invite your friends</string>
    <string name="id_98">You will earn 15 💎 per friend who registered with your code</string>
    <string name="id_99">You can try the additional matches and enjoy many great important features that enable you to use new tools to get a wonderful and unique experience</string>
    <string name="id_100">20% off</string>
    <string name="id_102">Confirmation and payment</string>
    <string name="id_103">Changing the gender preferences filter will cost you 13 gems per call.</string>
    <string name="id_104">Cancel</string>
    <string name="id_105">Pay now</string>
    <string name="id_106">Confirmation and payment</string>
    <string name="id_107">Changing the geographic preferences filter will cost you 13 gems per call.</string>
    <string name="id_108">Pay now</string>
    <string name="id_109">Report inappropriate behavior</string>
    <string name="id_110">Inappropriate language</string>
    <string name="id_111">Verbal abuse, insulting</string>
    <string name="id_112">Inappropriate behavior</string>
    <string name="id_120">Nudity, improper exposure, etc.</string>
    <string name="id_121">Cancel</string>
    <string name="id_122">Searching for a new friend …</string>
    <string name="id_124">Remove ads</string>
    <string name="id_113">Gender preferences</string>
    <string name="id_118">Male and Female</string>
    <string name="month">Month</string>
    <string name="free">free</string>
    <string name="edit">Edit your page</string>
    <string name="about">About me</string>
    <string name="w_somthing">Write something about yourself.</string>
    <string name="interests">My interests</string>
    <string name="ch_interests">Choose your interests</string>
    <string name="id_125">Preferred Countries</string>
    <string name="id_127">Choose places to visit</string>
    <string name="id_128">Let\'s meet a new friend now!</string>
    <string name="id_130">Friendship requests</string>
    <string name="id_131">Connect with the world</string>
    <string name="id_132">Log in using</string>
    <string name="id_133">Having trouble logging in?</string>
    <string name="id_134">When proceeding, you agree to</string>
    <string name="terms">" "Terms of Service" "</string>
    <string name="and">" "and" "</string>
    <string name="pr">" "Privacy Policy" "</string>
    <string name="id_136">Choose your hobbies and interests</string>
    <string name="id_145">Let others know more about you!</string>
    <string name="skip">Skip</string>
    <string name="id_137">Invitation</string>
    <string name="id_13">Accept</string>
    <string name="id_139">declined</string>
    <string name="id_138">Messaging</string>
    <string name="id_141">Interests</string>
    <string name="id_140">Kylie reactions</string>
    <string name="id_142">Special Offer</string>
    <string name="id_143">open</string>
    <string name="id_144">Select Region</string>
    <string name="sorry">Sorry, you don\'t have any likes yet</string>
    <string name="id_148">Interests</string>
    <string name="loc">Location</string>
    <string name="sp">My Advantages</string>
    <string name="time">local time</string>
    <string name="id_149">Membership of VIPs</string>
    <string name="id_150">The Order of VIPs</string>
    <string name="id_151">Turn on / off the VIP Badge</string>
    <string name="id_152">Geographic regions preferences</string>
    <string name="id_154">Meet friends from all over the world</string>
    <string name="id_155">Change of nickname</string>
    <string name="id_156">You can change your nickname</string>
    <string name="id_157">back camera</string>
    <string name="id_158">Choose what you want to show others</string>
    <string name="id_159">Specify a unique location</string>
    <string name="id_160">Change your private site to an enjoyable place</string>
    <string name="id_170">You can try our Premium Membership for VIPs that enable you to use many different features</string>
    <string name="id_161">original price</string>
    <string name="save">Save</string>
    <string name="id_162">Jewels</string>
    <string name="id_163">Buying gems</string>
    <string name="id_153">Blocked Friends</string>
    <string name="id_164">Clear history</string>
    <string name="id_165">My Fan List</string>
    <string name="id_166">Hide my age</string>
    <string name="id_167">Hide my location</string>
    <string name="id_168">Change my location</string>
    <string name="id_169">Change of nickname</string>
    <string name="id_171">VIPs Medal</string>
    <string name="id_172">VIP application icon</string>
    <string name="id_175">About</string>
    <string name="help">Help</string>
    <string name="id_178">Friendship requests</string>
    <string name="share">Sharing</string>
    <string name="logout">Sign out</string>
    <string name="id_179">A video call has been ended</string>
    <string name="id_180">Voice call ended</string>
    <string name="id_181">You have sent a photo</string>
    <string name="id_182">A picture has been sent</string>
    <string name="id_183">I have sent an audio message</string>
    <string name="id_184">An audio message has been sent</string>
    <string name="id_251">Male</string>
</resources>