<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#373737"
            android:text="@string/id_113"
            android:fontFamily="@font/arb_1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="#BABABA"
        android:layout_height="1dp"/>
    <RelativeLayout

        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/free"
                android:fontFamily="@font/arb_1"
                android:textSize="16sp"
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:id="@+id/radioButtonNoPre"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arb_1"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:paddingStart="10dp"
                android:checked="true"
                android:text="@string/id_118">
            </RadioButton>
            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arb_1"

                android:text="@string/id_67">
            </RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingStart="10dp"
                android:id="@+id/radioButtonMale"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arb_1"
                android:textSize="18sp"
                android:text="@string/id_68">
            </RadioButton>
        </RadioGroup>
    </RelativeLayout>


    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="#BABABA"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/ok"
        android:textColor="@color/colorPrimary"
        android:text="@string/ok"
        android:fontFamily="@font/arb_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
