<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
    android:paddingTop="10dp"
        android:src="@drawable/wallet"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_width="230dp"
        android:layout_height="140dp"/>
    <TextView
        android:textColor="#373737"
        android:text="@string/id_106"
        android:fontFamily="@font/arb_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="#595959"
        android:text="@string/id_107"
        android:fontFamily="@font/arb_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/text"
        android:textSize="16sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="#BABABA"
        android:layout_height="1dp"/>
  <LinearLayout
      android:weightSum="2"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="60dp">
      <TextView
          android:layout_weight="1"
         android:id="@+id/cancel"
          android:textColor="#979797"
          android:text="@string/id_104"
          android:fontFamily="@font/arb_1"
          android:layout_gravity="center"
          android:gravity="center"
          android:textSize="18sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <View
          android:layout_width="1dp"
          android:background="#BABABA"
          android:layout_height="match_parent"/>
      <TextView
          android:layout_weight="1"
          android:id="@+id/ok"
          android:textColor="#2B2B2B"
          android:text="@string/id_108"
          android:fontFamily="@font/arb_1"
          android:layout_gravity="center"
          android:gravity="center"
          android:textSize="18sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
  </LinearLayout>

</LinearLayout>
