<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".getStarted.get_started">

    <com.yqritc.scalablevideoview.ScalableVideoView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scalableType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C3000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/a2"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="55sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arb_1"
            android:gravity="center"
            android:text="@string/id_131"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/arb_1"
            android:gravity="center"
            android:text="@string/id_132"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.shaishavgandhi.loginbuttons.FacebookButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                 android:id="@+id/facebook_login"
                    android:text="Connect with facebook"
                    android:textAlignment="center"
                    android:textSize="11dp"
                    app:iconCenterAligned="false"
                    app:iconSize="24dp"
                    app:roundedCorner="true" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

            <com.shaishavgandhi.loginbuttons.GoogleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
           android:id="@+id/google"
                android:text="Connect with Google"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="11dp"
                app:iconSize="24dp"
                app:roundedCorner="true" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:gravity="bottom">

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/white"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arb_1"
                android:onClick="openLink"
                android:text="@string/id_133"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="10dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arb_1"
            android:text="@string/id_134"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arb_1"
            android:onClick="terms"
            android:text="@string/terms"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arb_1"
            android:text="@string/and"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arb_1"
            android:onClick="privacy"
            android:text="@string/pr"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp" />
    </LinearLayout>
</FrameLayout>