<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/close"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:id="@+id/close"
        android:padding="12dp"
        android:tint="#CDA1A1A1"
        android:layout_marginEnd="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
    <ImageView
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:src="@drawable/code"
        android:layout_width="140dp"
        android:layout_height="140dp"/>
    <TextView
        android:textColor="#373737"
        android:layout_marginTop="20dp"
        android:text="@string/id_96"
        android:fontFamily="@font/arb_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="#5A5A5A"
        android:text="2343453"
        android:fontFamily="@font/arb_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/codeViewer"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:textColor="#5A5A5A"
        android:text="@string/id_97"
        android:fontFamily="@font/arb_1"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="#5A5A5A"
        android:text="@string/id_98"
        android:fontFamily="@font/arb_1"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>
